--- a/.github/workflows/notify-on-feature-update.yml
+++ b/.github/workflows/notify-on-feature-update.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   notify:
     runs-on: ubuntu-latest
-    if: startsWith(toLower(github.event.head_commit.message), 'feat:')
+    if: startsWith(github.event.head_commit.message, 'feat:')
 
     steps:
       - name: Post to MS Teams
